# cpgfunctionEP

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp
.github/workflows/: build_and_test.yml  darwin_build.yml  linux_build.yml  mac_build.yml  windows_build.yml
LinearAlgebra/python/: gesv.py
LinearAlgebra/test/: gemv.cpp  gesv.cpp  scal.cpp
cppgfunction/: SegmentResponse.cpp  SegmentResponse.h  boreholes.cpp  boreholes.h  gfunction.cpp  gfunction.h  heat_transfer.cpp  heat_transfer.h  pool.cpp  pool.h  utilities.cpp  utilities.h
include/LinearAlgebra/: _gesv.h  axpy.h  copy.h  dot.h  gemv.h  gesv.h  lapack.h  scal.h  spmv.h
include/cpgfunction/: adaptive.h  boreholes.h  configurations.h  coordinates.h  exp_integral.h  gfunction.h  heat_transfer.h  interpolation.h  segments.h  statistics.h  utilities.h
include/stdlib/: exp_integral.h  exp_integral.tcc  specfun.h
jcc/: interpolation.cpp  interpolation.h
src/: SegmentResponse.cpp  _gesv.cpp  adaptive.cpp  axpy.cpp  blas.cpp  boreholes.cpp  configurations.cpp  coordinates.cpp  copy.cpp  dot.cpp  gemv.cpp  gesv.cpp  gfunction.cpp  heat_transfer.cpp  interpolation.cpp  lapack.cpp  scal.cpp  segments.cpp  spmv.cpp  utilities.cpp
test/: ComputeFLS.cpp  EPTest.cpp  axpy.cpp  borefield_definition.cpp  compute_UBHWT_gFunction.cpp  configurations.cpp  copy.cpp  dot.cpp  gFunctionTimings.cpp  gFunction_adaptive.cpp  gFunction_minimal.cpp  gFunction_tests.cpp  gemv.cpp  gesv.cpp  interpolation.cpp  main.cpp  packed.cpp  scal.cpp  spmv.cpp
test/custom_configurations/: poisson_disc_80_20.0_51.json
test/validation/: L.json  OpenRectangle.json  Rectangle.json  U.json  custom.json
